feat: crud de aeronauta completo
