# src/main/kotlin/br/gov/ma/ctamanagerservice/adapters/api/controllers/AeronautaController.kt
@@ -2,9 +2,10 @@ package br.gov.ma.ctamanagerservice.adapters.api.controllers
 
 import br.gov.ma.ctamanagerservice.adapters.api.AeronautaApi
 import br.gov.ma.ctamanagerservice.adapters.dto.AeronautaDto
-import br.gov.ma.ctamanagerservice.adapters.ext.toDomain
+import br.gov.ma.ctamanagerservice.adapters.dto.AeronautaRequestDto
 import br.gov.ma.ctamanagerservice.adapters.ext.toDto
 import br.gov.ma.ctamanagerservice.domain.entities.Aeronauta
+import br.gov.ma.ctamanagerservice.domain.services.AeronautaService
 import br.gov.ma.ctamanagerservice.util.WithLogging
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
@@ -14,17 +15,17 @@ class AeronautaController(
     private val aeronautaService: AeronautaService
 ) : AeronautaApi, WithLogging() {
 
-    override fun adicionarAeronauta(aeronautaDto: AeronautaDto): ResponseEntity<AeronautaDto> {
-        LOG.info("adicionando novo aeronauta")
+    override fun adicionarAeronauta(aeronautaRequestDto: AeronautaRequestDto): ResponseEntity<AeronautaDto> {
+        LOG.info("adicionando novo aeronauta: $aeronautaRequestDto")
         return ResponseEntity.ok(
-            aeronautaService.criar(aeronautaDto.toDomain()).toDto()
+            aeronautaService.criar(aeronautaRequestDto.cpf, aeronautaRequestDto.codigoAnac).toDto()
         )
     }
 
-    override fun buscarAeronauta(codigoAnac: Int?, cpf: String?): ResponseEntity<List<AeronautaDto>> {
-        LOG.info("buscando todas os aeronautas")
+    override fun buscarAeronauta(codigoAnac: Int?, cpf: String?, nome: String?): ResponseEntity<List<AeronautaDto>> {
+        LOG.info("buscando aeronautas")
         return ResponseEntity.ok(
-            aeronautaService.recuperarTudo(codigoAnac, cpf).map(Aeronauta::toDto)
+            aeronautaService.recuperarTudo(codigoAnac, cpf, nome).map(Aeronauta::toDto)
         )
     }
 
@@ -35,4 +36,3 @@ class AeronautaController(
         )
     }
 }
-
