# src/main/kotlin/br/gov/ma/ctamanagerservice/domain/entities/Pessoa.kt
@@ -3,5 +3,6 @@ package br.gov.ma.ctamanagerservice.domain.entities
 data class Pessoa(
     val id: Long,
     val nome: String,
-    val cpf: String
+    val cpf: String,
+    val telefone: String?
 )
